fix(ui): show admin column on mobile

--- a/style.css
+++ b/style.css
@@ -723,7 +723,6 @@ tbody tr:last-child td {
     }
 
     .col-ip,
-    .col-admin,
     .col-reason {
         display: none;
     }
